infra/k8s/00-namespace-config.yml
apiVersion: v1
kind: Namespace
metadata:
  name: video-retrieval
  labels:
    name: video-retrieval
